--- a/sass/_sec-left.scss
+++ b/sass/_sec-left.scss
@@ -62,8 +62,6 @@
 
                 svg {
                     margin-right: 5px;
-                    width: 1.42857143rem;
-                    height: 1.42857143rem;
                 }
 
                 span {
